# LibTorch-UPCXX-OpenCV

./: README.md
#1-libtorch/: CMakeLists.txt  compile-command.txt
#1.0-libtorch-cpu/: compile-command.txt
#1.1-libtorch-cuda/: CMakeLists.txt  compile-command.txt  example-app.cpp
#2-upcxx/: compile-commands.txt  hello_world.cpp  helloworld
#3-libtorch-upcxx/: CMakeLists.txt  compile-command.txt  example-app.cpp  hello  print.cpp  print.h
#3-libtorch-with-upcxx/: CMakeLists.txt  compile-command.txt  example-app.cpp
#4-libtorch-upcxx-opencv/: compile-command.txt  example-app.cpp
#5-opencv/: CMakeLists.txt  compile-command.txt  example-app.cpp
